# Analyzing-the-Complexity-of-Monotone-Prolog

./: .gitpod.Dockerfile  .gitpod.yml  README.md  cabal.project  camp.cabal  code.cabal
examples/: README
examples/constant/at/: at.pl  at.txt
examples/constant/dc_schema/: dc_schema.pl
examples/constant/dyck/: dyck.pl
examples/constant/even/: even.pl  even.txt
examples/constant/even3/: even3.pl
examples/constant/example1/: example1.pl  example1.txt  note.txt
examples/constant/fold/: fold.pl  fold.txt
examples/constant/grammar/: grammar.pl
examples/constant/grammar2/: grammar2.pl  grammar2.txt
examples/constant/grammar3/: grammar3.pl  grammar3.txt
examples/constant/gtsolve/: gtsolve.pl
examples/constant/incomplete_variant/: incomplete_variant.pl
examples/constant/kay4/: kay4.pl
examples/constant/map-color/: map_color.pl  map_color.txt
examples/constant/pl2.3.1/: pl2.3.1.pl  pl2.3.1.txt
examples/constant/pl3.5.6a/: pl3.5.6a.pl  pl3.5.6a.txt
examples/constant/simple/: simple.pl  simple.txt
examples/constant/toyama/: note.txt  toyama.pl
examples/constant/transitive_closure/: transitive_closure.pl  transitive_closure.txt
examples/failing/: README
examples/failing/NJ6/: NJ6.pl  why.txt
examples/failing/div/: div.pl  div.txt  why.txt
lib/parsec-prolog/: parsec-prolog.cabal
resources/: add_mul.pl  addition_rules.txt  debugging.txt  example18.pl  example21_rules.txt  links.txt  quadratic.pl  query_classes.txt  recursive_function_symbol_example.pl
src/: Main.hs
src/Data/: Implicit.hs
src/ExprToTerm/: Conversion.hs
src/Query/: Utilities.hs
src/SymbolicEvaluationGraphs/: Heuristic.hs  InferenceRules.hs  Types.hs  Utilities.hs  Visualization.hs
src/TRS/: Encoding.hs  TPDB.hs
(+228 files in other folders)
