name:                camp
version:             0.1.0.0
synopsis:            Complexity Analyzer for Monotone Prolog
license:             LGPL-3
license-file:        LICENSE
author:              Philipp.Wirtenberger@student.uibk.ac.at
maintainer:          author
category:            Complexity Analysis
build-type:          Simple
cabal-version:       >=1.10

executable camp
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9, parsec, bytestring, containers, mtl, multiset >= 0.2 && < 0.3, ansi-wl-pprint, array, union-find-array, diagrams-svg, diagrams-lib, diagrams-contrib, SVGFonts, MissingH, rosezipper, monad-extras, monad-supply, lens
  hs-source-dirs:      src, lib/parsec-prolog/src, lib/term-rewriting/src
  default-language:    Haskell2010
  ghc-options:         -fno-cse -fno-full-laziness
