name:                camp
version:             0.1.0.0
synopsis:            Complexity Analyzer for Monotone Prolog
license:             LGPL-3
license-file:        LICENSE
author:              Philipp.Wirtenberger@student.uibk.ac.at
maintainer:          author
category:            Complexity Analysis
build-type:          Simple
cabal-version:       >=1.10

executable camp
  main-is:             Main.hs
  build-depends:       term-rewriting, parsec-prolog, SVGFonts < 1.7, base, parsec, bytestring, containers, mtl, multiset, ansi-wl-pprint, array, union-find-array, diagrams-svg, diagrams-lib, diagrams-contrib, SVGFonts, MissingH, rosezipper, monad-extras, monad-supply, lens, file-embed
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-cse -fno-full-laziness
